--- a/src/01-color-switcher.html
+++ b/src/01-color-switcher.html
@@ -7,11 +7,16 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <p><a href="index.html">Go back</a></p>
+ <section class="container">
+      <p class="text"><a href="index.html">Go back</a></p>
 
-    <button type="button" data-start>Start</button>
-    <button type="button" data-stop>Stop</button>
+      <h1>Переключатель цветов</h1>
+      <p class="text">После нажатия кнопки «Start», раз в секунду меняется цвет фона на случайное значение</p>
 
+      <button type="button" data-start>Start</button>
+      <button type="button" data-stop>Stop</button>
+
+ </section>
     <script src="js/01-color-switcher.js" type="module"></script>
   </body>
 </html>
