--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -6,8 +6,13 @@
     <title>Countdown timer</title>
     <link rel="stylesheet" href="css/common.css" />
   </head>
-  <body>
+  <body class="body">
+
+  <section class="container">
     <p><a href="index.html">Go back</a></p>
+
+    <h1>Таймер обратного отсчета</h1>
+    <p class="text">Таймер ведёт обратный отсчет до определенной даты.</p>
 
     <input type="text" id="datetime-picker" />
     <button type="button" data-start>Start</button>
@@ -31,6 +36,7 @@
       </div>
     </div>
 
+  </section>
     <script src="js/02-timer.js" type="module"></script>
   </body>
 </html>
