--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,13 @@
     <title>Homework 9</title>
     <link rel="stylesheet" href="css/common.css" />
   </head>
-  <body>
-    <ul>
-      <li><a href="01-color-switcher.html">Color switcher</a></li>
-      <li><a href="02-timer.html">Countdown timer</a></li>
-      <li><a href="03-promises.html">Promise generator</a></li>
-    </ul>
+  <body class="body">
+    <section class="container">
+      <ul class="list">
+        <li class="item"><a href="01-color-switcher.html">Color switcher</a></li>
+        <li class="item"><a href="02-timer.html">Countdown timer</a></li>
+        <li class="item"><a href="03-promises.html">Promise generator</a></li>
+      </ul>
+    </section>
   </body>
 </html>
